NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@78395 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_forums/asax.html
+++ b/messageforums-help/src/sakai_forums/asax.html
@@ -82,7 +82,7 @@ participants.</p>
 <p><strong>Print-friendly view:</strong> A print-friendly view is
 available.</p>
 
-<p><strong>Import forums and topics:</strong> Re-use materials easily
+<p><strong>Import forums and topics:</strong> Reuse materials easily
 by importing forums and topics from your other sites.</p>
 
 <p><strong>Settings:</strong> The site owner (or another participant
@@ -91,14 +91,25 @@ posts to a topic before they have permission to read the responses of
 others.</p>
 
 <p><strong>Group awareness:</strong> Site leaders can change forum and
-topic settings in combination with pre-defined groups to allow or deny
+topic settings in combination with predefined groups to allow or deny
 access to specific discussions per group.</p>
 
-<h3>Things to consider</h3>
+<p><strong>Direct link to individual messages:</strong> Site leaders
+can copy a direct link to individual messages to use.</p>
 
-<ul><li>A forum is not visible to site participants unless at least one
-topic is created.
-</li></ul>
+<p><strong>Email the author of a message:</strong> Site leaders can
+directly email the author of a posting from within the forum tool.</p>
+
+
+<p><strong>Ability to watch forums:</strong> Site members can elect to
+receive no notification, notification for all new postings in a site,
+or notification for responses to threads they've posted in.</p>
+
+
+<p><strong>View counts of Messages and Forum postings at a
+glance:</strong> From My Workspace, a Messages and Forums synoptic
+view will be available that will display all unread messages and
+forums for any site a user is a member of.</p>
 
 <h3>Help documentation</h3>
 
