--- a/messageforums-help/src/sakai_forums/asci.html
+++ b/messageforums-help/src/sakai_forums/asci.html
@@ -50,16 +50,8 @@ must be assigned a role having the necessary permissions.  To
 determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
 permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
-<p>There are no default forums or topics in the Forums tool. No forums
-will appear in this area until someone with an appropriate role
-creates them. By default, participants (e.g., students) in a course
-site cannot create forums.</p>
-
-<p><strong>Note:</strong> When you create your forum, you'll need to
-add at least one topic so site participants can post messages. The
-forum will not be visible to participants unless a topic is added.</p>
-
-<p>To create a new forum:</p>
+<p>A default forum and topic is populated for each site.  To create a new
+forum:</p>
 
 <ol><li>In your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Forums</code></strong>. The
 Forums screen will open.
@@ -69,13 +61,12 @@ Forums screen will open.
 will open.
 
 <br /><br />
-</li><li>In the "Forum Title" field, type your forum's title. This is a
-required field, and is limited to 75 characters.
+</li><li>In the "Forum Title" field, type your forum's title. 
 
 <br /><br />
 </li><li>In the "Short Description" field, you may provide a brief
-description (limited to 100 characters) that will be displayed along
-with the title in the Forums area. 
+description (limited to 255 characters) that will be displayed along
+with the title in the Forums area.
 
 <br /><br />
 </li><li>In the "Description" field, you may enter an in-depth description
@@ -88,16 +79,16 @@ computer or from Resources, or specify the URL for a file on the
 web. For instructions, see <a href="content.hlp?docId=aupf">Options for adding attachments</a>.
 
 <br /><br />
-</li><li>To disable forum postings, under "Forum Posting", click the
-<strong><code>Yes</code></strong> radio button next to "Lock Topic (Disable forum
+</li><li>To disable forum postings, under "Forum Posting", select
+<strong><code>Yes</code></strong> next to "Lock Topic (Disable forum
 postings)". <strong><code>No</code></strong> is selected by default, allowing site
 participants to post messages about your forum topic.
 
 <br /><br />
-</li><li>To moderate forum postings, under "Forum Posting", click the
-<strong><code>Yes</code></strong> radio button next to "Moderate Topics in Forum".
-<strong><code>No</code></strong> is selected by default, allowing site participants to post
-messages without moderation.
+</li><li>To moderate forum postings, under "Forum Posting", select
+<strong><code>Yes</code></strong> next to "Moderate Topics in Forum".  <strong><code>No</code></strong> is
+selected by default, allowing site participants to post messages
+without moderation.
 </li><li>
 <p>Under "Permissions", you can modify permission levels for
 participant roles (and groups, if you've created them; see <a href="content.hlp?docId=atcs">Managing groups</a>). To do so, from the list under
@@ -168,10 +159,6 @@ must be assigned a role having the necessary permissions.  To
 determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
 permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
-<p><strong>Note:</strong> When you create your forum, you'll need to
-add at least one topic so site participants can post messages. The
-forum will not be visible to participants unless a topic is added.</p>
-
 <p>To add a topic while you're creating your forum, first finish
 creating the forum, and then click <strong><code>Save Settings &amp; Add
 Topic</code></strong>.</p>
@@ -183,11 +170,11 @@ title. To its right, click <strong><code>New Topic</code></strong>.</p>
 <p>On the Topics Settings screen:</p>
 
 <ol><li>Next to "Topic Title", enter a title in the text box. This is a
-required field, and is limited to 75 characters.
+required field.
 
 <br /><br />
 </li><li>Next to "Short Description", you may provide a brief description
-(limited to 100 characters) that will display below the title in the
+(limited to 255 characters) that will display below the title in the
 Discussion Forums area.
 
 <br /><br />
@@ -197,20 +184,19 @@ resources.
 
 <br /><br />
 </li><li>To add an attachment, under "Attachments", click <strong><code>Add
-Attachment</code></strong>. The file selector screen will open. For instructions,
-see <a href="content.hlp?docId=aupf">Options for adding attachments</a>.
+Attachment</code></strong>. The file selector screen will open.  See <a href="content.hlp?docId=aupf">Options for adding attachments</a>.
 
 <br /><br />
-</li><li>To disable topic postings, under "Topic Postings", click the
-<strong><code>Yes</code></strong> radio button next to "Lock Topic (Disable topic
+</li><li>To disable topic postings, under "Topic Postings", click
+<strong><code>Yes</code></strong> next to "Lock Topic (Disable topic
 postings)". <strong><code>No</code></strong> is selected by default, allowing site
 participants to post messages about your forum topic.
 
 <br /><br />
-</li><li>To moderate topic postings, under "Topic Posting", click the
-<strong><code>Yes</code></strong> radio button next to "Moderate Topic".  <strong><code>No</code></strong> is
-selected by default, allowing site participants to post messages
-without moderation.
+</li><li>To moderate topic postings, under "Topic Posting", click
+<strong><code>Yes</code></strong> next to "Moderate Topic".  <strong><code>No</code></strong> is selected by
+default, allowing site participants to post messages without
+moderation.
 </li><li>
 <p>Under "Permissions", you can modify permission levels for
 participant roles (and groups, if you've created them; see <a href="content.hlp?docId=atcs">Managing groups</a>). To do so, from the list under
