--- a/messageforums-help/src/sakai_forums/ausz.html
+++ b/messageforums-help/src/sakai_forums/ausz.html
@@ -17,13 +17,20 @@ topics</title>
 <h2>Changing the order of forums and
 topics</h2>
 
+
 <p>The Forums tool allows you to change the order in which discussion
 forums and topics are listed:</p>
 
-<ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Forums</code></strong>.<br /><br />
-</li><li>At the top, click <strong><code>Organize</code></strong>.<br /><br />
+<ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Forums</code></strong>.
+
+<br /><br />
+</li><li>At the top, click <strong><code>Organize</code></strong>.
+
+<br /><br />
 </li><li>Use the drop-down lists to manipulate the order of forums and
-topics.<br /><br />
+topics.
+
+<br /><br />
 </li><li>When you're finished, click <strong><code>Save Settings</code></strong>.  To cancel,
 click <strong><code>Cancel</code></strong>.
 </li></ol>
