--- a/messageforums-help/src/sakai_forums/avai.html
+++ b/messageforums-help/src/sakai_forums/avai.html
@@ -49,6 +49,11 @@ columns labeled "Authored", "Read", "Unread", and "Percent Read".
     </li><li><strong>Forum Read:</strong> Lists the titles of the topics
     of posts read, the date and time they were read, and the subject
 </li></ul><br />
+</li><li>To review the content of all of a particular participant's posts at once,
+from the list of messages authored, click <strong><code>Show Full Text for All</code></strong>.
+
+<p>You can also see an individual posting in context by clicking
+<strong><code>[display in thread]</code></strong>.</p>
 </li><li>Click <strong><code>Forums</code></strong> to return to the Forums page.
 </li></ol>
 
