--- a/messageforums-help/src/sakai_forums/auul.html
+++ b/messageforums-help/src/sakai_forums/auul.html
@@ -44,8 +44,8 @@ permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overvie
 <br /><br />
 </li><li>Find and click the message you want to delete, and then click
 <strong><code>Delete</code></strong>. Alternatively, you can click the title of the thread
-or <strong><code>Display Entire Message</code></strong>, and then, next to the message,
-click <strong><code>Other Actions</code></strong>, and select <strong><code>Delete</code></strong>.
+or <strong><code>Display Entire Message</code></strong>, and then, below the message title,
+click <strong><code>Delete</code></strong>.
 
 <br /><br />
 </li><li>On the confirmation page, click <strong><code>Delete</code></strong> to delete the message.
