NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@80117 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_forums/asci.html
+++ b/messageforums-help/src/sakai_forums/asci.html
@@ -45,9 +45,9 @@
 
 <h3>Creating a forum</h3>
 
-<p><strong>Note:</strong> To complete these procedures, you
-must be assigned a role having the necessary permissions.  To
-determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
+<p><strong>Note:</strong> To complete these procedures, you must be
+assigned a role having the necessary permissions.  To determine your
+role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
 permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 <p>A default forum and topic is populated for each site.  To create a new
@@ -154,9 +154,9 @@ Forums screen.
 
 <h3>Creating a topic</h3>
 
-<p><strong>Note:</strong> To complete these procedures, you
-must be assigned a role having the necessary permissions.  To
-determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
+<p><strong>Note:</strong> To complete these procedures, you must be
+assigned a role having the necessary permissions.  To determine your
+role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
 permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 <p>To add a topic while you're creating your forum, first finish
