--- a/messageforums-help/src/sakai_forums/atdk.html
+++ b/messageforums-help/src/sakai_forums/atdk.html
@@ -30,9 +30,9 @@
 
 
 
-<p><strong>Note:</strong> To complete these procedures, you
-must be assigned a role having the necessary permissions.  To
-determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
+<p><strong>Note:</strong> To complete these procedures, you must be
+assigned a role having the necessary permissions.  To determine your
+role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
 permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 <p><strong>Note:</strong> To delete an individual forum message, see
@@ -48,16 +48,14 @@ click one of the following:
 
 <br /><br />
 
-<ul><li><strong><code>Template Settings</code></strong> opens the Default Template Settings
-screen. Settings from this template will apply each time you create a
-new forum or topic. You can override these settings for an individual
-forum or topic after you've created it.
-</li><li><strong><code>Forum Settings</code></strong> opens the Forum Settings screen. This
-setting overrides the default template settings for an individual
-forum.
-</li><li><strong><code>Topic Settings</code></strong> opens the Topic Settings screen. This
-setting overrides the default template and forum settings for an
-individual topic.
+<ul><li><strong>Template Settings:</strong> Settings from this default
+template will apply each time you create a new forum or topic. You can
+override these settings for an individual forum or topic after you've
+created it.
+</li><li><strong>Forum Settings:</strong> This setting overrides the
+default template settings for an individual forum.
+</li><li><strong>Topic Settings:</strong> This setting overrides the default
+template and forum settings for an individual topic.
 </li></ul><br />
 </li><li>For a forum or topic, you can change the title, descriptions, and
 attachments. You can also choose to disable postings. For a forum or
@@ -69,17 +67,17 @@ permissions. For instructions, see <a href="content.hlp?docId=atdt">Controlling 
 
 <br /><br />
 
-<ul><li><strong><code>Save Settings</code></strong> saves your changes and returns you to
-the Forums screen.
-</li><li><strong><code>Save Draft</code></strong> saves your forum as a draft and returns you
-to the Forums screen.
-</li><li><strong><code>Save Settings &amp; Add Topic</code></strong> saves your changes and
+<ul><li><strong>Save Settings:</strong> Saves your changes and returns you to
+the Forums screen
+</li><li><strong>Save Draft:</strong> Saves your forum as a draft and returns you
+to the Forums screen
+</li><li><strong>Save Settings &amp; Add Topic:</strong> Saves your changes and
 opens the Topic Settings screen for adding a new topic to your
-forum. For more information, see <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>.
-</li><li><strong><code>Delete</code></strong> removes your Forum and/or Topic with all
-associated messages, and takes you to a confirmation page.
-</li><li><strong><code>Cancel</code></strong> cancels your changes and returns you to the
-Forums screen.
+forum; see <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>.
+</li><li><strong>Delete</strong> Removes your forum and/or topic with all
+associated messages, and takes you to a confirmation page
+</li><li><strong>Cancel</strong> Cancels your changes and returns you to the
+Forums screen
 </li></ul>
 </li></ol>
 
