--- a/messageforums-help/src/sakai_forums/avar.html
+++ b/messageforums-help/src/sakai_forums/avar.html
@@ -15,7 +15,7 @@
 <div class="helpBody">
 <h2>Moderating messages in a forum</h2>
 
-<p><strong>Note:</strong> The following instructions assume that
+<p><strong>Note:</strong> The following instructions assume
 you've created a moderated forum; see <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a> or <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>.</p>
 
 <p>To moderate messages in Forums:</p>
