NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@81137 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_forums/asax.html
+++ b/messageforums-help/src/sakai_forums/asax.html
@@ -14,76 +14,58 @@
 <body>
 <div class="helpBody">
 <h2>Forums: Overview</h2>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <h3>What it does</h3>
 
 
-<p>Forums is a communication tool that instructors or site leaders can
-use to create an unlimited number of discussion forums for their
-course or project sites. The Forums tool is designed to be an
-effective tool for both academic and collaborative work, and is
+<p>The Forums tool allows instructors or site leaders to create an unlimited number of discussion forums for
+course or <a href="content.hlp?docId=ardt">project sites</a>, and is
 integrated closely with other tools such as Resources and
 Gradebook.</p>
 
 <h3>Key concepts</h3>
 
-<p><strong>Discussion forums:</strong> Asynchronous discussion
-provides an opportunity for your site participants to engage site
-resources and each other, and allows for the free expression of
-convergent and divergent ideas. Interactions can be assigned a point
+
+<p><strong>Grading option:</strong> Interactions can be assigned a point
 value and sent to the Gradebook with comments.</p>
 
-<p><strong>Viewing forums:</strong> On your site's Home page (select
-<strong><code>Home</code></strong> on the site's <a href="content.hlp?docId=arcc">menubar</a>), participants can see
-how many unread discussion forum messages they have. On
-the Forums screen, participants see the number of unread
-messages and the grand total of messages for each topic.  In the
-forums list, forums and topics are viewed as a thread by
-default.</p>
+<p><strong>Counts of unread posts at a
+glance:</strong>  On your site's Home page (select
+<strong><code>Home</code></strong> on the site's <a href="content.hlp?docId=arcc">menubar</a>), you can see
+how many unread messages or posts you have in both Messages and Forums. 
+ From My Workspace, you can see these totals for all sites you're a member of.</p>
 
-<p><strong>Composing messages:</strong> A WYSIWYG interface
+<p><strong>Ability to watch forums:</strong> Site members can elect to
+receive no notification, notification for all new postings in a site,
+or notification for responses to threads they've posted in.</p>
+
+<p><strong>Composing messages:</strong> A WYSIWYG 
+(What You See Is What You Get) interface
 allows rich text, plain text, and HTML editing. You can add
 attachments to any message by linking to files or web links in
-Resources.
-</p><p><strong>Quoted text:</strong> Use the <strong><code>Insert Original Text</code></strong>
+Resources.</p>
+
+
+<p><strong>Note:</strong> Pasting text from Microsoft Word directly
+into the WYSIWYG editor may result in garbled output, even
+if the text appears correct in the editor.  Instead, to insert
+formatted text from a Word document, click the <strong><code>Paste from
+Word</code></strong> icon, place your cursor in the subsequent "Paste from Word"
+text box, and then press <code>Ctrl-v</code> in Windows, or
+<code>Cmd-v</code> on a Macintosh, to paste your copied
+text. Using <code>Ctrl-v</code> (or <code>Cmd-v</code>) to paste is
+the best method for preserving the formatting of the original Word
+document. Click <strong><code>OK</code></strong> to add the text to the item you are
+composing. </p>
+
+<p><strong>Quoted text:</strong> Use the <strong><code>Insert Original Text</code></strong>
 option to insert the previous post into your response.</p>
 
 <p><strong>Statistics:</strong> Forum statistics are available for
 site owners to determine the participation level of individual
-participants.</p>
+participants.  You can also read all of a particular participant's
+posts using this feature.</p>
 
-<p><strong>Print-friendly view:</strong> A print-friendly view is
-available.</p>
 
-<p><strong>Import forums and topics:</strong> Reuse materials easily
-by importing forums and topics from your other sites.</p>
 
 <p><strong>Settings:</strong> The site owner (or another participant
 with the appropriate role) can enable participants to submit their
@@ -101,15 +83,7 @@ can copy a direct link to individual messages to use.</p>
 directly email the author of a posting from within the forum tool.</p>
 
 
-<p><strong>Ability to watch forums:</strong> Site members can elect to
-receive no notification, notification for all new postings in a site,
-or notification for responses to threads they've posted in.</p>
 
-
-<p><strong>View counts of Messages and Forum postings at a
-glance:</strong> From My Workspace, a Messages and Forums synoptic
-view will be available that will display all unread messages and
-forums for any site a user is a member of.</p>
 
 <h3>Help documentation</h3>
 
