--- a/messageforums-help/src/sakai_forums/asbe.html
+++ b/messageforums-help/src/sakai_forums/asbe.html
@@ -14,24 +14,8 @@
 <body>
 <div class="helpBody">
 <h2>Viewing Forums</h2>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <p>To see the list of forums for your site, click
 <strong><code>Forums</code></strong> in your site's <a href="content.hlp?docId=arcc">menubar</a>.</p>
-
-<h4>Viewing messages</h4>
 
 <p><strong>Note:</strong> The Forums tool is pre-populated with a default
 forum and topic.</p>
@@ -57,9 +41,9 @@ particular forum and its topics.</p>
 <p>Clicking the title of any topic will display a thread of messages
 for that particular topic. If a full description of the topic exists,
 click <strong><code>Read Full Description</code></strong> to view it. Each individual
-thread appears in a list with a count of total messages and unread
-messages below. Use the arrows to the left of the messages to expand
-the threads as needed.</p>
+thread appears in an enclosed box with a count of total messages and
+unread messages below. Use the arrows to the left of the messages to
+expand the threads as needed.</p>
  
 <p>To expand all threads and messages, click <strong><code>Display Entire
 Message</code></strong>. To mark all of the messages as read, click <strong><code>Mark All
@@ -67,48 +51,16 @@ As Read</code></strong>. To open a printable version of the messages, click the
 printer icon at the top.</p>
 
 <p>Clicking the title of the thread will open an isolated view of a
-particular thread and its individual messages; in this view, the "Read
-By" number will display.  Use the <strong><code>View</code></strong> drop-down list to
-change the display of messages.</p>
+particular thread and its individual messages. Use the <strong><code>View</code></strong>
+drop-down list to change the display of messages.</p>
+
+<p>Those with appropriate permissions (e.g., instructors) may see the
+content of all posts by a particular participant using the statistics
+function; see <a href="content.hlp?docId=avai">Participation statistics</a>.</p>
 
 <p>To open an individual message, click its subject.</p>
 
-<h4>Forum options</h4>
-
-<p>Depending on how the forum settings are configured, and your role
-within the site, the following options may be available:</p>
-
-<ul><li><strong>New Forum:</strong> Opens the Forum Settings screen for
-creating a new forum. See <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>.
-
-<br /><br />
-</li><li><strong>Organize:</strong> Opens the Organize Forums and Topics
-screen for changing the order of forums and topics. See <a href="content.hlp?docId=ausz">Changing the order of forums and topics</a>.
-
-<br /><br />
-</li><li><strong>Template Settings:</strong> Opens the Default Settings
-Template screen. See <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>.
-
-<br /><br />
-</li><li><strong>Statistics:</strong> Displays individual statistics for
-course participants. See <a href="content.hlp?docId=avai">Participation statistics</a>.
-
-<br /><br />
-</li><li><strong>Pending Messages:</strong> For moderated forums, displays
-any messages pending approval. See <a href="content.hlp?docId=avar">Moderating messages in a forum</a>.
-
-<br /><br />
-</li><li><strong>New Topic:</strong> Opens the Topic Settings screen for
-creating a new topic. See <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>.
-
-<br /><br />
-</li><li><strong>Forum Settings:</strong> Opens the Forum Settings screen
-for revising an existing forum. See <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>.
-
-<br /><br />
-</li><li><strong>Topic Settings:</strong> Opens the Topic Settings screen
-for revising an existing topic. See <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>.
-</li></ul>
+<p>In moderated forums, to see messages awaiting your approval, click <strong><code>Pending Messages</code></strong>; see <a href="content.hlp?docId=avar">Moderating messages in a forum</a>.</p>
 
 
 </div>
