--- a/messageforums-help/src/sakai_forums/asbg.html
+++ b/messageforums-help/src/sakai_forums/asbg.html
@@ -16,34 +16,24 @@
 <h2>Forums</h2>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <h3>Overview</h3>
 
 
-<p>Forums is a communication tool that instructors or site
-leaders can use to create an unlimited number of discussion forums for
-their course or project sites. <a href="content.hlp?docId=asax">More...</a></p>
+<p>The Forums tool allows instructors or site leaders to create an unlimited number of discussion forums for
+course or <a href="content.hlp?docId=ardt">project sites</a>, and is
+integrated closely with other tools such as Resources and
+Gradebook. <a href="content.hlp?docId=asax">More...</a></p>
 
 
 <h3>How do I?</h3>
 
-<p>For specific instructions on the functions of the Forums tool, see:</p>
+
+
+
+
+
+
+
 
 <ul><li><a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>
 </li><li><a href="content.hlp?docId=atdt">Controlling access to Forums</a>
@@ -56,8 +46,11 @@ their course or project sites. <a href="content.hlp?docId=asax">More...</a></p>
 </li><li><a href="content.hlp?docId=azve">Emailing forum message authors</a>
 </li><li><a href="content.hlp?docId=azvh">Linking to a message in Forums</a>
 </li><li><a href="content.hlp?docId=arbr">Using the WYSIWYG editor</a>
-
 </li></ul>
+
+
+
+
 
 
 </div>
