--- a/messageforums-help/src/sakai_forums/asci.html
+++ b/messageforums-help/src/sakai_forums/asci.html
@@ -15,17 +15,7 @@
 <div class="helpBody">
 <h2>Creating a new forum and topic in Forums</h2>
 
-
-
-
-
-
-
-
-
-
-
-
+<a name="top"> </a>
 
 
 
@@ -64,16 +54,16 @@ will open.
 </li><li>In the "Forum Title" field, type your forum's title. 
 
 <br /><br />
-</li><li>In the "Short Description" field, you may provide a brief
+</li><li>In the "Short Description" field, you can provide a brief
 description (limited to 255 characters) that will be displayed along
 with the title in the Forums area.
 
 <br /><br />
-</li><li>In the "Description" field, you may enter an in-depth description
+</li><li>In the "Description" field, you can enter an in-depth description
 of your forum, and provide any associated information or
 resources.
 
-<br /><br />
+
 </li><li>Under "Attachments", you can attach a file from your local
 computer or from Resources, or specify the URL for a file on the
 web. For instructions, see <a href="content.hlp?docId=aupf">Options for adding attachments</a>.
@@ -82,7 +72,7 @@ web. For instructions, see <a href="content.hlp?docId=aupf">Options for adding a
 </li><li>To disable forum postings, under "Forum Posting", select
 <strong><code>Yes</code></strong> next to "Lock Topic (Disable forum
 postings)". <strong><code>No</code></strong> is selected by default, allowing site
-participants to post messages about your forum topic.
+participants to post messages.
 
 <br /><br />
 </li><li>To moderate forum postings, under "Forum Posting", select
@@ -137,14 +127,11 @@ Gradebook, see <a href="content.hlp?docId=aran">Adding, editing, or deleting a G
 
 <br /><br />
 
-<ul><li><strong>Save Draft:</strong> Save your forum as a draft. You'll
-return to the Forums screen. Forums saved as draft will not be
+<ul><li><strong>Save Draft:</strong> Save your forum as a draft. Forums saved as draft will not be
 available to site participants.
 </li><li><strong>Save Settings &amp; Add Topic:</strong> Save your changes
-and add a topic to your forum. You will need to add a topic so site
-members can post messages.
-</li><li><strong>Cancel:</strong> Cancel your changes; you'll return to the
-Forums screen.
+and add a topic to your forum. 
+</li><li><strong>Cancel:</strong> Cancel your changes.
 </li></ul>
 </li></ol>
 
@@ -164,25 +151,24 @@ creating the forum, and then click <strong><code>Save Settings &amp; Add
 Topic</code></strong>.</p>
 
 <p>To add a topic later (i.e., after you've created and saved your
-forum), go to the Forums screen and find your forum's
-title. To its right, click <strong><code>New Topic</code></strong>.</p>
+forum), on the Forums screen, to the right of your forum's
+title, click <strong><code>New Topic</code></strong>.</p>
 
 <p>On the Topics Settings screen:</p>
 
-<ol><li>Next to "Topic Title", enter a title in the text box. This is a
-required field.
+<ol><li>Next to "Topic Title", enter a title in the text box (required).
 
 <br /><br />
-</li><li>Next to "Short Description", you may provide a brief description
+</li><li>Next to "Short Description", you can provide a brief description
 (limited to 255 characters) that will display below the title in the
 Discussion Forums area.
 
 <br /><br />
-</li><li>Next to "Description", you may enter an in-depth description of
+</li><li>Next to "Description", you can enter an in-depth description of
 your forum, and provide any associated information or
 resources.
 
-<br /><br />
+
 </li><li>To add an attachment, under "Attachments", click <strong><code>Add
 Attachment</code></strong>. The file selector screen will open.  See <a href="content.hlp?docId=aupf">Options for adding attachments</a>.
 
@@ -190,7 +176,7 @@ Attachment</code></strong>. The file selector screen will open.  See <a href="co
 </li><li>To disable topic postings, under "Topic Postings", click
 <strong><code>Yes</code></strong> next to "Lock Topic (Disable topic
 postings)". <strong><code>No</code></strong> is selected by default, allowing site
-participants to post messages about your forum topic.
+participants to post messages.
 
 <br /><br />
 </li><li>To moderate topic postings, under "Topic Posting", click
@@ -246,20 +232,20 @@ Gradebook, see <a href="content.hlp?docId=aran">Adding, editing, or deleting a G
 <br /><br />
 
 <ul><li><strong>Save Settings:</strong> Save your changes, post the topic,
-and exit the Forum Settings screen. This returns you to the Forums
-screen, where you can see your newly posted topic within your forum.
-</li><li><strong>Save Draft:</strong> Save your topic as a draft. You'll
-return to the Forums screen.
-</li><li><strong>Save Settings &amp; Add Topic:</strong> Save your changes,
-and add another topic to your forum. This opens a blank Topic Settings
-screen,and allows you to create an additional topic without returning
-to the Forums screen.
-</li><li><strong>Cancel:</strong> Cancel your changes. You'll return to the
-Forums screen.
+and exit the Forum Settings screen. 
+You'll see your newly posted topic within your forum on the Forums screen.
+</li><li><strong>Save Draft:</strong> Save your topic as a draft.
+</li><li><strong>Save Settings &amp; Add Topic:</strong> Save your changes
+and add another topic to your forum. 
+</li><li><strong>Cancel:</strong> Cancel your changes. 
 </li></ul>
 </li></ol>
 
 <p><a href="#top">Back to top</a></p>
+
+ <a name="demos"> </a>
+ 
+
 
 
 </div>
