--- a/messageforums-help/src/sakai_forums/auut.html
+++ b/messageforums-help/src/sakai_forums/auut.html
@@ -14,20 +14,6 @@
 <body>
 <div class="helpBody">
 <h2>Messages and Forums notifications</h2>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <p>You can see the number of new messages or forum postings from either <a href="content.hlp?docId=aqzy">My Workspace</a> or your site's Home page.  You can also choose to get email
 notification of new messages or new postings on forum threads you have 
 contributed to.</p>
@@ -72,10 +58,10 @@ site.</p>
 <br /><br />
 </li><li>Next to "Auto Forward Messages", click <strong><code>Yes</code></strong>. Type the desired email address in the text box provided, and then click <strong><code>Save Settings</code></strong>. This
 will forward a copy of each message to the email address you entered.
-
 </li></ol>
 
-<p><strong>Note:</strong> You cannot reply to Messages from the forwarded email messages; to reply, go to the Messages tool in your site. </p>
+<p><strong>Note:</strong> You cannot reply to Messages from the forwarded
+email messages; to reply, go to the Messages tool in your site.</p>
 
 <h4>Forums</h4>
 
@@ -87,7 +73,6 @@ will forward a copy of each message to the email address you entered.
 <br /><br />
 </li><li>Select your preferred option.
 </li></ol>
-
 
 </div>
 </body></html>
