--- a/messageforums-help/src/sakai_forums/avai.html
+++ b/messageforums-help/src/sakai_forums/avai.html
@@ -17,37 +17,29 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
 <p>Using Forums, you can view statistics for individual course
 participants, including the number of authored, read, and unread
-posts.</p>
+posts. You can also see the full text of all posts by a particular
+participant.</p>
 
 <p>To view statistics for course participants:</p>
 
-<ol><li>In your site's menubar, click <strong><code>Forums</code></strong>, and then click
+<ol><li>In your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Forums</code></strong>, and then click
 <strong><code>Statistics</code></strong>. You'll see the participant list followed by
 columns labeled "Authored", "Read", "Unread", and "Percent Read".
 
 <br /><br />
-</li><li>Click a participant's name to see the following individual statistics:<br /><br />
+</li><li>Click a participant's name to see the following individual
+statistics:
 
+<br /><br />
 
 <ul><li><strong>Forum Authored:</strong> Lists the titles of the
     topics of posts authored by the participant, the date and time they were
     created, and the subject
 
-    </li><li><strong>Forum Read:</strong> Lists the titles of the topics
-    of posts read, the date and time they were read, and the subject
+    </li><li><strong>Forum Read:</strong> Lists the titles of the topics of posts
+    read, the date and time they were read, and the subject
 </li></ul><br />
 </li><li>To review the content of all of a particular participant's posts at once,
 from the list of messages authored, click <strong><code>Show Full Text for All</code></strong>.
@@ -56,6 +48,11 @@ from the list of messages authored, click <strong><code>Show Full Text for All</
 <strong><code>[display in thread]</code></strong>.</p>
 </li><li>Click <strong><code>Forums</code></strong> to return to the Forums page.
 </li></ol>
+
+<a name="demos"> </a>
+
+
+
 
 
 </div>
