--- a/messageforums-help/src/sakai_messages/augw.html
+++ b/messageforums-help/src/sakai_messages/augw.html
@@ -17,21 +17,9 @@ messages</title>
 <h2>Sending, forwarding, and replying to
 messages</h2>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <a name="top"> </a>
+
+
 
 <p>Using Messages, you can send messages to other site participants, and
 reply to messages sent by other participants.</p>
@@ -51,7 +39,7 @@ reply to messages sent by other participants.</p>
 
 <h3>Sending a message </h3>
 
-<p>To compose and send a message:</p>
+<p>To send a message:</p>
 
 <ol><li>In your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Messages</code></strong>.
 
@@ -77,27 +65,38 @@ Address(es)</code></strong>.
 Recipients' Email Address(es)</code></strong> option, your message will go
 directly to the recipients' email addresses, and a copy will go to both
 their <code>Received</code> folders and your <code>Sent</code> folder
-in Messages.</p>
+in Messages.  Recipients cannot reply to the message via email; they must
+use the Messages tool.</p>
+
 
 </li><li>Under "Label", use the drop-down list to change the priority
 status for your message.
 
 <br /><br />
-</li><li>Next to "Subject", type the subject of your
-message.
+</li><li>Next to "Subject", type the subject of your message.
 
 <br /><br />
 </li><li>Under "Message", use the WYSIWYG editor to compose your
 message.
 
-<br /><br />
+
+<p><strong>Note:</strong> Pasting text from Microsoft Word directly
+into the WYSIWYG editor may result in garbled output, even
+if the text appears correct in the editor.  Instead, to insert
+formatted text from a Word document, click the <strong><code>Paste from
+Word</code></strong> icon, place your cursor in the subsequent "Paste from Word"
+text box, and then press <code>Ctrl-v</code> in Windows, or
+<code>Cmd-v</code> on a Macintosh, to paste your copied
+text. Using <code>Ctrl-v</code> (or <code>Cmd-v</code>) to paste is
+the best method for preserving the formatting of the original Word
+document. Click <strong><code>OK</code></strong> to add the text to the item you are
+composing. </p>
 </li><li>Under "Attachments", you can attach a file from your local
 computer or from Resources, or specify the URL for a file on the
 web. For instructions, see <a href="content.hlp?docId=aupf">Options for adding attachments</a>.
 
 <br /><br />
-</li><li>When you're finished, click <strong><code>Send</code></strong> to send your
-message, or <strong><code>Cancel</code></strong> to cancel your message.
+</li><li>To send your message, click <strong><code>Send</code></strong>.
 </li></ol>
 
 <p><a href="#top">Back to top</a></p>
@@ -132,7 +131,7 @@ editor. To edit and send the forwarded message, follow steps 3 through
 
 <h3>Replying to a message</h3>
 
-<p>To reply to a message someone sent to you:</p>
+<p>To reply to a message:</p>
 
 <ol><li>In your site's menubar, click <strong><code>Messages</code></strong>.
 
@@ -151,6 +150,9 @@ messages you've received.
 </li></ol>
 
 <p><a href="#top">Back to top</a></p>
+
+ <a name="demos"> </a>
+
 
 
 </div>
