--- a/messageforums-help/src/sakai_messages/avao.html
+++ b/messageforums-help/src/sakai_messages/avao.html
@@ -17,9 +17,8 @@
 
 <h3>What it does</h3>
 
-<p>Messages is a communication tool that allows site participants to
-communicate using internal course mail. In addition, it supports
-messaging between groups.</p>
+<p>The Messages tool is an internal course mail system for 
+messaging between individuals and groups.</p>
 
 <h3>Key concepts</h3>
 
@@ -57,8 +56,9 @@ select number of individuals, or a select number of groups.
 <br /><br />
 </li><li>Messages you send using the <strong><code>To
 Recipients' Email Address(es)</code></strong> option are sent directly to
-participants' email addresses and are <strong>not</strong> stored in
-the Messages area.
+participants' email addresses; copies also appear in your <code>Sent</code>
+folder and the recipients' <strong><code>Received</code></strong> folders within Messages.  
+Recipients must reply using Messages, not their email programs.
 </li></ul>
 
 <h3>Help documentation</h3>
