--- a/messageforums-help/src/sakai_messages/avaq.html
+++ b/messageforums-help/src/sakai_messages/avaq.html
@@ -18,9 +18,8 @@
 <h3>Overview</h3>
 
 
-<p>Messages is a communication tool that allows site participants to
-communicate using internal course mail. Private messaging between
-groups is also supported. <a href="content.hlp?docId=avao">More...</a></p>
+<p>The Messages tool is an internal course mail system for 
+messaging between individuals and groups. <a href="content.hlp?docId=avao">More...</a></p>
 
 <h3>How do I?</h3>
 
