--- a/messageforums-help/src/sakai_forums/auul.html
+++ b/messageforums-help/src/sakai_forums/auul.html
@@ -14,21 +14,6 @@
 <body>
 <div class="helpBody">
 <h2>Deleting a forum message</h2>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <p><strong>Note:</strong> To complete these procedures, you must be
 assigned a role having the necessary permissions.  To determine your
 role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
@@ -48,14 +33,12 @@ or <strong><code>Display Entire Message</code></strong>, and then, below the mes
 click <strong><code>Delete</code></strong>.
 
 <br /><br />
-</li><li>On the confirmation page, click <strong><code>Delete</code></strong> to delete the message.
+</li><li>On the confirmation page, click <strong><code>Delete</code></strong>.
 </li></ol>
 
 <p><strong>Note:</strong> You can also delete the forum or topic
-entirely, which will remove any associated messages. For instructions,
+entirely, which will remove any associated messages; 
 see <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>.</p>
-
-
 
 </div>
 </body></html>
