--- a/messageforums-help/src/sakai_messages/augv.html
+++ b/messageforums-help/src/sakai_messages/augv.html
@@ -16,19 +16,6 @@
 <h2>Viewing and managing messages</h2>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 <p>The Messages tool is intended for private correspondence with other
 individuals or groups in your site. Messages are organized into
 default <code>Received</code>, <code>Sent</code>, and
@@ -42,19 +29,25 @@ tool:</p>
 Folder</code></strong>.<br /><br />
 </li><li>To forward your messages to an email address of your choosing,
 click <strong><code>Settings</code></strong>. Next to "Auto Forward Messages", click
-<strong><code>Yes</code></strong>. Type the desired email address in the text box provided,
-and then click <strong><code>Save Settings</code></strong>.<br /><br />
-</li><li>The total number of messages and unread messages for each folder
-is displayed next to the folder's title. To see the contents of any
-folder, click the folder's name.
+<strong><code>Yes</code></strong>. Type the email address in the text box,
+and then click <strong><code>Save Settings</code></strong>.
+
+<p><strong>Note:</strong> You cannot reply to Messages from the forwarded
+email messages; to reply, go to the Messages tool in your site.</p>
+
+
+
+</li><li>You'll see the total number of messages and unread messages for each folder
+next to the folder's title. To see the contents of a
+folder, click its name.
 </li></ul>
 
 <p>Inside a folder, you will see a list of messages arranged by
 date.</p>
 
-<ul><li>To sort messages, click the relevant column title for
-<strong><code>Subject</code></strong>, <strong><code>Authored By</code></strong>, <strong><code>Date</code></strong>, or
-<strong><code>Label</code></strong>.<br /><br />
+<ul><li>To sort messages, click a column title 
+(<strong><code>Subject</code></strong>, <strong><code>Authored By</code></strong>, <strong><code>Date</code></strong>, or
+<strong><code>Label</code></strong>).<br /><br />
 </li><li>To change the way messages are displayed, from the "View"
 drop-down list, select either <strong><code>All Messages</code></strong> or <strong><code>By
 Conversation</code></strong>.<br /><br />
@@ -64,7 +57,7 @@ Folder</code></strong>.<br /><br />
 </li><li>To view the contents of a message, click its subject.
 <br /><br />
 </li><li>To mark messages as read or unread, check the messages you wish to
-mark, then click <strong><code>Mark Read</code></strong> or <strong><code>Mark Unread</code></strong>.  <br /><br />
+mark, and then click <strong><code>Mark Read</code></strong> or <strong><code>Mark Unread</code></strong>.  <br /><br />
 </li><li>To move messages to another folder, check the messages you wish to
 move, and then click <strong><code>Move</code></strong>.  Select the destination folder,
 and then click <strong><code>Move Messages</code></strong>.  <br /><br />
@@ -74,7 +67,6 @@ then click <strong><code>Delete</code></strong>. This moves the messages to the
 them. To purge deleted messages, open the <strong><code>Deleted</code></strong> folder,
 select the messages you wish to purge, click <strong><code>Delete</code></strong>, and then
 click <strong><code>Delete Message(s)</code></strong> to confirm.
-
 </li></ul>
 
 <p>Inside a message, you will see the message contents and other details.</p>
@@ -88,6 +80,8 @@ folder</code></strong>. Use the radio buttons to select a destination folder, an
 then click <strong><code>Move Message</code></strong>.<br /><br />
 </li><li>To delete a message, click <strong><code>Delete</code></strong>. To confirm the
 deletion, again click <strong><code>Delete</code></strong>.</li></ul>
+
+ <a name="demos"> </a>
 
 
 
